--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -349,7 +349,7 @@
                     <label>@L["CommodityAttributes"]</label>
                 </div>
                 <div class="col-10">
-                    <div class="row">
+                  @*   <div class="row">
                         <div class="col-3">
                             <label>@L["TimeLimitPeriod"]</label>
                         </div>
@@ -359,7 +359,7 @@
                         <div class="col-3">
                             <DateEdit @bind-Date="CreateItemDto.LimitAvaliableTimeEnd" Style="width:100%" Placeholder="@L["EndDate"].ToString()" TValue="DateTime" />
                         </div>
-                    </div>
+                    </div> *@
                     <div class="row">
                         <div class="col-3">
                             <label>@L["ShareProfit"]</label>
