--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -177,7 +177,7 @@
                 </span>
             </div>
         </div>
-        <div class="row">
+      @*   <div class="row">
             <div class="col-2">
                 <fieldLabel>@L["ItemTags"]</fieldLabel>
             </div>
@@ -196,7 +196,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> *@
         <div class="row">
             <div class="col-2">
                 <label>@L["ItemStyle"]</label>
@@ -374,14 +374,14 @@
                         <Switch TValue="bool" @bind-Checked="@UpdateItemDto.IsFreeShipping"></Switch>
                     </div>
                 </div>
-                <div class="row">
+               @*  <div class="row">
                     <div class="col-3">
                         <label>@L["Returnable"]</label>
                     </div>
                     <div class="col-3">
                         <Switch TValue="bool" @bind-Checked="UpdateItemDto.IsReturnable"></Switch>
                     </div>
-                </div>
+                </div> *@
               @*   <div class="row">
                     <div class="col-3">
                         <label>@L["ShippingMethod"]</label>
