--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -179,7 +179,7 @@
                     </span>
                 </div>
             </div>
-            <div class="row">
+           @*  <div class="row">
                 <div class="col-2">
                     <fieldLabel>@L["ItemTags"]</fieldLabel>
                 </div>
@@ -198,7 +198,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> *@
             <div class="row">
                 <div class="col-2">
                     <label>@L["ItemStyle"]</label>
@@ -376,14 +376,14 @@
                             <Switch TValue="bool" @bind-Checked="@CreateItemDto.IsFreeShipping"></Switch>
                         </div>
                     </div>
-                    <div class="row">
+                   @*  <div class="row">
                         <div class="col-3">
                             <label>@L["Returnable"]</label>
                         </div>
                         <div class="col-3">
                             <Switch TValue="bool" @bind-Checked="CreateItemDto.IsReturnable"></Switch>
                         </div>
-                    </div>
+                    </div> *@
                     <div class="row">
                         <div class="col-3">
                             <label>@L["ShippingMethod"]</label>
