--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -189,7 +189,7 @@
                                         </tr>
                                         <tr>
                                             <td>@L["RecipientCity"]</td>
-                                            <td>@L[Order.City]</td>
+                                            <td>@L[Order.City??""]</td>
                                         </tr>
                                         <tr>
                                             <td>@L["RecipientAddress"]</td>
